fix: shifts on smell screen

--- a/public/welcome.css
+++ b/public/welcome.css
@@ -551,10 +551,24 @@ button {
       font-size: x-small;
     }
   }
+  @media(max-width:426px) {
+    #normal_for_cellphone {
+      display: block;
+      margin-top: -130px;
+      margin-bottom: 60px;
+      margin-left: -5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
 
-  @media(max-width:320px) {
+  @media(max-width:321px) {
     .logo {
       margin-left: -10px;
+    }
+
+    #normal_for_cellphone {
+      margin-left: -20%;
     }
   }
 
